background image issue on mobile - fix attempt 2

--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@ body:before {
   height: 100%;
   z-index: -10;
   background: url(/Stream1Project/img/wood5.jpg) no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
 }
 
 p {
